syntax = "proto3";
package joltify.joltifychain.vault;

import "gogoproto/gogo.proto";

option go_package = "gitlab.com/joltify/joltifyChain/x/vault/types";

message Params{
  option (gogoproto.equal)            = true;
  option (gogoproto.goproto_stringer) = false;
  int64  block_churn_interval = 1 [(gogoproto.moretags) = "yaml:\"block_churn_interval\""];
  int64  power = 2 [(gogoproto.moretags) = "yaml:\"power\""];
  int64  step = 3 [(gogoproto.moretags) = "yaml:\"step\""];

  string candidate_ratio= 4 [
    (gogoproto.moretags)   = "yaml:\"candidate_ratio\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}
